infra/autonomous-db/workload-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-autonomousdb-workload
spec:
  validationFailureAction: audit
  rules:
    - name: allow-only-specific-workloads
      match:
        resources:
          kinds:
            - opentofu.upbound.io/v1beta1/Workspace
      validate:
        message: "DB workloads can only be of type OLTP, DW, AJD, or APEX"
        anyPattern:
          - spec:
              forProvider:
                env:
                  - name: TF_VAR_db_workload
                    value: "?^(OLTP|DW|AJD|APEX)$"
